--- a/DOC/Indikátory/Dopad změny timeframe na indikátor.ipynb
+++ b/DOC/Indikátory/Dopad změny timeframe na indikátor.ipynb
@@ -26,18 +26,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "d28a1f83",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\jaros\\AppData\\Local\\Temp\\ipykernel_5556\\1844878439.py:5: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
-      "  idx_h = pd.date_range(\"2024-01-01\", periods=hours, freq=\"H\")\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -96,7 +88,7 @@
        "2024-01-01 04:00:00  102.423926"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +98,7 @@
     "np.random.seed(42)\n",
     "days = 150                  # ~5 měsíců\n",
     "hours = days * 24\n",
-    "idx_h = pd.date_range(\"2024-01-01\", periods=hours, freq=\"H\")\n",
+    "idx_h = pd.date_range(\"2024-01-01\", periods=hours, freq=\"h\")\n",
     "\n",
     "returns = np.random.normal(loc=0.0002, scale=0.01, size=hours)  # mírný kladný drift\n",
     "price = 100 * np.exp(np.cumsum(returns))                        # log-normální cesta\n",
@@ -117,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "503eaa0f",
    "metadata": {},
    "outputs": [
@@ -179,7 +171,7 @@
        "2024-01-05  93.145922"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "id": "a7a136f6",
    "metadata": {},
    "outputs": [],
@@ -205,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "8967c78c",
    "metadata": {},
    "outputs": [],
@@ -227,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "id": "39a5c2cf",
    "metadata": {},
    "outputs": [
@@ -267,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "4dc50094",
    "metadata": {},
    "outputs": [
